Fixed stretching and added benefits to careeer page

--- a/src/assets/less/careers.less
+++ b/src/assets/less/careers.less
@@ -85,6 +85,119 @@
 }
 
 /*-- -------------------------- -->
+<---          Services          -->
+<--- -------------------------- -*/
+
+/* Mobile - 360px */
+@media only screen and (min-width: 0rem) {
+    #services-17 {
+        padding: 5rem 0rem; 
+
+        .cs-container {
+            width: 100%;
+            max-width: (1280/16rem);
+            margin: auto;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            /* 48px - 64px */
+            gap: clamp(3rem, 6vw, 4rem);
+        }
+
+        .cs-content {
+            /* set text align to left if content needs to be left aligned */
+            text-align: center;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            /* centers content horizontally, set to flex-start to left align */
+            align-items: center;
+        }
+
+        .cs-card-group {
+            width: 100%;
+            /* changes to 1280px at desktop */
+            max-width: (900/16rem);
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: (32/16rem);
+        }
+
+        .cs-item {
+            text-align: left;
+            list-style: none;
+            width: 100%;
+            max-width: (368/16rem);
+            margin: 0;
+            display: flex;
+            justify-content: flex-start;
+            align-items: flex-start;
+        }
+
+        .cs-picture {
+            margin-right: (20/16rem);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+            /* 60px - 68px */
+            width: clamp(3.75rem, 6vw, 4.25rem);
+            height: clamp(3.75rem, 6vw, 4.25rem);
+            border-radius: 50%;
+            border: 2px solid var(--primary);
+            /* prevents border from affecting height and width */
+            box-sizing: border-box;
+            /* prevents flexbox from squishing it */
+            flex: none;
+        }
+
+        .cs-icon {
+            width: (30/16rem);
+            height: auto;
+            display: block;
+        }
+
+        .cs-h3 {
+            font-size: (20/16rem);
+            line-height: 1.5em;
+            margin: 0;
+            color: var(--headerColor);
+        }
+    }
+}
+
+/* Tablet - 600px */
+@media only screen and (min-width: 37.5rem) {
+    #services-17 {
+        .cs-card-group {
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            flex-wrap: wrap;
+            column-gap: (40/16rem);
+            row-gap: (40/16rem);
+        }
+
+        .cs-item {
+            margin: 0;
+            width: 46%;
+        }
+    }
+}
+
+/* Desktop - 1300px */
+@media only screen and (min-width: 81.25rem) {
+    #services-17 {
+        .cs-card-group {
+            max-width: (1280/16rem);
+        }
+    }
+}
+
+/*-- -------------------------- -->
 <---            Map             -->
 <--- -------------------------- -*/
 
@@ -99,6 +212,7 @@
         align-items: center;
         position: relative;
 
+
         .cs-background {
             width: 100%;
             height: 100%;
@@ -112,16 +226,15 @@
                 position: absolute;
                 top: 0;
                 left: 0;
-                height: 100%;
-                width: 75%;
-                margin-left: 18rem;
-                margin-top: 5rem;
+                height: 75%;
+                width: auto;
+                margin-left: 5rem;
+
                 /* Makes img tag act as a background image */
             }
         }
     }
 }
-
 
 /*-- -------------------------- -->
 <---           Bamboo          -->
@@ -131,6 +244,7 @@
 @media only screen and (min-width: 0em) {
     #BambooHR {
         padding: 2rem;
+
       
         a {
           text-decoration: none;
